Fixed overlapping issue in small screen

--- a/style.css
+++ b/style.css
@@ -414,7 +414,7 @@ i {
     /* ------------ Skills ------------ */
 
     #skill {
-        height: 93vh;
+        height: 103vh;
         width: 100%;
         display: flex;
         flex-direction: column;
@@ -443,7 +443,7 @@ i {
     /* ------------------ Project ------------------ */
 
     #project {
-        height: 93vh;
+        height: 103vh;
         width: 100%;
         display: flex;
         flex-direction: column;
